@@ -266,3 +266,10 @@ img.youtube_mini {
 table.index_table tr.even td.status {
   background: #DDD;
 }
+
+a.suspicious_true {
+  color: #FF6600;
+}
+a.spam_true {
+  color: #ff0000;
+}
