@@ -12,7 +12,6 @@
 <% else %>
 <meta name="keywords" content="worldmathaba, independent news">
 <% end %>
-
 <% if @meta_author %>
 <meta name="author" content="<%= @meta_author %>">
 <% else %>
