@@ -6,7 +6,7 @@
       <%= link_to "World Mathaba", root_path, title: "World Mathaba", class: "brand" %>
       
       <ul class="nav">
-        <% cache("topbar/#{Time.now.hour}") do %>
+        <% cache_expiring("topbar") do %>
           <li id="home_link"><%= link_to "Home", root_path, title: "Home" %></li>
           <li class="dropdown" data-dropdown="dropdown">
             <a href="#" class="dropdown-toggle">Sections</a>
