@@ -17,7 +17,8 @@ Publication::Application.configure do
   # Show full error reports and disable caching
   config.consider_all_requests_local       = true
   config.action_controller.perform_caching = true
-  config.cache_store = :dalli_store, "127.0.0.1", { :namespace => "mnn_test", :expires_in => 1.hour, :compress => true }
+  config.cache_store = :dalli_store, "127.0.0.1",
+    { namespace: "mnn_test", expires_in: 2.hour, compress: true }
 
   # Raise exceptions instead of rendering exception templates
   config.action_dispatch.show_exceptions = false
@@ -36,7 +37,7 @@ Publication::Application.configure do
   # Print deprecation notices to the stderr
   config.active_support.deprecation = :stderr
   
-  config.action_mailer.default_url_options = { :host => 'localhost:3000' }
+  config.action_mailer.default_url_options = { host: 'mathaba.dev' }
 end
 
 ActiveRecord::Base.logger = Logger.new('/dev/null')
